# ros-hellhole-collection

./: README.md
back/: compile_commands.json
back/src/publisher/: package.xml
back/src/subscriber/: CMakeLists.txt  main.cpp  package.xml
filter/: compile_commands.json
filter/.catkin_tools/profiles/default/: devel_collisions.txt
filter/.clangd/index/: PoseStamped.h.2E7F863ED929D4A5.idx
filter/src/publisher/: main.cpp  package.xml
filter/src/subscriber/: CMakeLists.txt  main.cpp
rossata/: compile_commands.json  note.org
rossata/.catkin_tools/profiles/default/: devel_collisions.txt
rossata/.clangd/index/: PoseStamped.h.B7DF3296E04CB9EC.idx  can.h.643244B086A14AE4.idx  curvature_throttle.h.6619CD5C0316DA41.idx  main.cpp.0EFD5C050B969D0B.idx  main.cpp.81EDBF31EA6C5B46.idx  main.cpp.B46DD014C90E7D1C.idx  main.cpp.C54DEC646F021EC5.idx  main.cpp.F0A89AD2BFB55D5F.idx  steering.h.0C3A587AD2F02615.idx
rossata/src/publisher/: CMakeLists.txt  main.cpp
rossata/src/subscriber/: main.cpp  package.xml
suca/: note.org
suca/src/driverless_msgs/: .gitignore  CMakeLists.txt  README.md
suca/src/driverless_msgs/msg/: PoseStamped.msg  bounding_boxes.msg  can.msg  control_to_traj.msg  curvature_throttle.msg  steering.msg  trajectory.msg
suca/src/publisher/: CMakeLists.txt  main.cpp
tutorial/.catkin_tools/profiles/default/: devel_collisions.txt
tutorial/.clangd/index/: main.cpp.2736922E84F9E9B5.idx
